samples/_failures_safe/1761355290_20ad23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9b42770.c: In function ‘main’:
./samples/SAFE/__tmp_a9b42770.c:137:9: error: expected declaration or statement at end of input
  137 |         analyze_logs(buffer);
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_a9b42770.c:137:9: error: expected declaration or statement at end of input
